// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an article 1`] = `
<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta
      content="Some Headline"
      name="article:title"
    />
    <meta
      content="The Times"
      name="article:publication"
    />
    <meta
      content="Some byline"
      name="author"
    />
    <meta
      content="Some Headline"
      property="og:title"
    />
    <meta
      content="article"
      property="og:type"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      property="og:url"
    />
    <meta
      content="https://crop169.io"
      property="og:image"
    />
    <meta
      content="Some Headline"
      name="twitter:title"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      name="twitter:url"
    />
    <meta
      content="https://crop169.io"
      name="twitter:image"
    />
  </Helmet>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div>
        <div>
          <div>
            SOME LABEL
          </div>
        </div>
        <h1
          aria-level="1"
          role="heading"
        >
          Some Headline
        </h1>
        <h2
          aria-level="2"
          role="heading"
        >
          Some Standfirst
        </h2>
        <div>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2019-03-14T12:00:00.000Z",
                  "type": "NEW",
                },
              ]
            }
          />
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <ArticleBylineWithLinks
              ast={
                Array [
                  Object {
                    "byline": Array [
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Some byline",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "inline",
                      },
                    ],
                  },
                ]
              }
            />
          </span>
        </div>
        <div>
          <span>
            <DatePublication
              date="2015-03-13T18:54:58.000Z"
              publication="TIMES"
            />
          </span>
        </div>
      </div>
      <div>
        <nav>
          <ArticleTopics
            topics={
              Array [
                Object {
                  "name": "Topic",
                  "slug": "topic",
                },
              ]
            }
          />
        </nav>
      </div>
    </div>
    <div>
      <figure>
        <div>
          <div>
            <Image
              aspectRatio={1.7777777777777777}
              highResSize={null}
              lowResSize={100}
              uri="https://crop169.io"
            />
          </div>
        </div>
        <figcaption>
          <div>
            <div>
              <div>
                <div>
                  Some Caption
                </div>
                <div>
                  SOME CREDITS
                </div>
              </div>
            </div>
          </div>
        </figcaption>
      </figure>
    </div>
    <div>
      <div>
        <div>
          <div>
            <div>
              Share
            </div>
            <Link>
              <svg
                aria-label="[title]"
                height={15}
                role="img"
                viewBox="0 0 22 16"
                width={20.625}
              >
                <title>
                  Share by email client
                </title>
                <g
                  fill="#696969"
                  fillRule="nonzero"
                >
                  <path
                    d="M22,0 L22,16 L0,16 L0,0 L22,0 Z M13.5135,8 L20.2711667,2.23985068 L20.0346667,1.91880541 L11,9.20018665 L2.04233333,2.00093327 L1.80583333,2.32197853 L8.56533333,8.08026132 L1.80766667,13.8404106 L2.04233333,14.1595894 L9.0365,8.47970135 L11,10.1595894 L13.0423333,8.39944004 L20.0346667,14.079328 L20.2711667,13.7582828 L13.5135,8 Z"
                  />
                </g>
              </svg>
            </Link>
            <Link
              target="_blank"
              url="https://twitter.com/intent/tweet?text=undefined"
            >
              <svg
                aria-label="[title]"
                height={15}
                role="img"
                viewBox="-354.2 -279.4 750 600"
                width={18.75}
              >
                <title>
                  Share on tweeter
                </title>
                <path
                  d="M391.3-210.7c-28.9,10.9-57.8,21.7-86.7,25.3c32.5-18.1,54.2-50.6,68.7-83.1c-28.9,18.1-61.5,28.9-97.6,36.1 c-28.9-28.9-68.7-47-112-47c-83.1,0-151.8,68.7-151.8,151.8c0,10.8,0,25.3,3.6,36.1c-126.5-7.3-238.6-68.7-314.5-159 c-14.5,21.7-21.7,50.6-21.7,75.9c0,54.2,25.3,101.2,68.7,126.5c-25.3,0-47-7.2-68.7-18.1c0,0,0,0,0,3.6 c0,72.3,54.2,137.4,122.9,148.2c-14.5,3.6-25.3,3.6-39.7,3.6c-10.9,0-18.1,0-28.9-3.6c18.1,61.5,75.9,104.8,141,104.8 c-50.6,39.8-119.3,65.1-188,65.1c-10.8,0-25.3,0-36.1-3.6c68.7,43.3,148.2,68.7,234.9,68.7C167.2,320.6,319,89.3,319-113.1 c0-7.2,0-14.4,0-18.1C344.3-152.9,369.6-181.8,391.3-210.7z"
                  fill="#696969"
                />
              </svg>
            </Link>
            <Link
              target="_blank"
              url="https://www.facebook.com/sharer/sharer.php?text=undefined"
            >
              <svg
                aria-label="[title]"
                height={18}
                role="img"
                viewBox="14 10 10.592460632324219 20.397258758544922"
                width={9}
              >
                <title>
                  Share on facebook
                </title>
                <g
                  fill="#696969"
                  fillRule="nonzero"
                >
                  <path
                    d="M20.8754687,30.3972581 L20.8754687,21.0930804 L23.9984274,21.0930804 L24.4660462,17.4670773 L20.8754687,17.4670773 L20.8754687,15.1521034 C20.8754687,14.1022918 21.1669846,13.3868799 22.6723889,13.3868799 L24.5924599,13.3860409 L24.5924599,10.1429146 C24.2603909,10.0987257 23.1206168,10 21.7945782,10 C19.0262491,10 17.1309761,11.6898042 17.1309761,14.7929991 L17.1309761,17.4670773 L14,17.4670773 L14,21.0930804 L17.1309761,21.0930804 L17.1309761,30.3972581 L20.8754687,30.3972581 Z"
                  />
                </g>
              </svg>
            </Link>
            <Link>
              <svg
                aria-label="[title]"
                height={15}
                role="img"
                viewBox="0 0 15 15"
                width={15}
              >
                <title>
                  Copy link o clipboard
                </title>
                <path
                  d="M13.936 1.12A3.532 3.532 0 0 0 11.36 0a3.53 3.53 0 0 0-2.575 1.119l-3.22 3.38c-1.42 1.49-1.42 3.914 0 5.405.229.24.49.43.763.596L7.71 9.052a1.793 1.793 0 0 1-.857-.5 1.924 1.924 0 0 1-.455-.827v-.002a1.984 1.984 0 0 1-.06-.324l-.001-.011a2.074 2.074 0 0 1-.005-.32l.002-.025c.009-.103.024-.206.048-.307.001-.009.005-.017.007-.026.08-.314.23-.614.464-.86l3.22-3.38a1.776 1.776 0 0 1 1.288-.558c.465 0 .932.187 1.287.559a1.98 1.98 0 0 1 0 2.703l-1.119 1.174c.03.082.05.167.075.25l.001.002a5.013 5.013 0 0 1 .216 1.702l-.007.082c-.008.134-.013.268-.032.402l2.154-2.26c1.42-1.491 1.42-3.917 0-5.406zM8.672 4.5l-1.38 1.45c.312.08.611.24.856.497.227.24.373.526.456.828v.003c.029.107.048.214.06.323v.011c.01.107.013.213.006.32l-.003.026a2.01 2.01 0 0 1-.047.307c-.002.01-.006.018-.008.026-.08.314-.23.613-.464.86l-3.22 3.378c-.356.374-.822.56-1.288.56-.465 0-.932-.186-1.287-.56a1.978 1.978 0 0 1 0-2.702l1.119-1.175c-.03-.082-.05-.167-.075-.25l-.02-.069A4.982 4.982 0 0 1 3.18 6.7c0-.029.004-.056.006-.083.008-.134.013-.268.032-.402l-2.154 2.26c-1.42 1.49-1.42 3.915 0 5.405A3.537 3.537 0 0 0 3.64 15c.973 0 1.887-.398 2.576-1.119l3.22-3.379c1.419-1.49 1.419-3.915 0-5.404a3.644 3.644 0 0 0-.764-.598z"
                  fill="#696969"
                />
              </svg>
            </Link>
          </div>
          <div>
            <div>
              Save
            </div>
            <Link>
              <svg
                aria-label="[title]"
                height={16}
                role="img"
                viewBox="0 0 12 16"
                width={12}
              >
                <title>
                  Save to My Articles
                </title>
                <path
                  d="M1 0h10a1 1 0 0 1 1 1v15l-5.98-4.466L0 16V1a1 1 0 0 1 1-1z"
                  fill="#FFFFFF"
                  stroke="#696969"
                />
              </svg>
            </Link>
          </div>
        </div>
      </div>
    </div>
    <div>
      <p>
        Some content
      </p>
      <ArticleExtras
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentsEnabled={true}
        relatedArticleSlice={
          Object {
            "__typename": "StandardSlice",
            "items": Array [
              Object {
                "article": Object {
                  "__typename": "Article",
                  "bylines": Array [],
                  "hasVideo": false,
                  "headline": "RA Headline",
                  "id": "ra-1",
                  "label": "RA Label",
                  "leadAsset": Object {
                    "__typename": "Image",
                    "crop169": Object {
                      "__typename": "Crop",
                      "url": "https://racrop169.io",
                    },
                    "crop32": Object {
                      "__typename": "Crop",
                      "url": "https://racrop32.io",
                    },
                    "title": "RA Title",
                  },
                  "publicationName": "TIMES",
                  "publishedTime": "2015-03-23T19:39:39.000Z",
                  "shortHeadline": "Headline",
                  "shortIdentifier": "2k629tpvh",
                  "slug": "this-is-slug",
                  "summary105": Array [],
                  "summary125": Array [],
                  "summary145": Array [],
                  "summary160": Array [],
                  "summary175": Array [],
                  "summary225": Array [],
                  "url": "https://ra.io",
                },
              },
            ],
          }
        }
        relatedArticlesVisible={false}
        topics={
          Array [
            Object {
              "name": "Topic",
              "slug": "topic",
            },
          ]
        }
      />
    </div>
  </div>
</article>
`;

exports[`2. loading 1`] = `null`;

exports[`3. an error 1`] = `null`;

exports[`4. an article with no headline falls back to use shortheadline 1`] = `
<article>
  <Helmet>
    <title>
      Some Short Headline
       | 
      
      The Times
    </title>
    <meta
      content="Some Short Headline"
      name="article:title"
    />
    <meta
      content="The Times"
      name="article:publication"
    />
    <meta
      content="Some Short Headline"
      property="og:title"
    />
    <meta
      content="article"
      property="og:type"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      property="og:url"
    />
    <meta
      content="Some Short Headline"
      name="twitter:title"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      name="twitter:url"
    />
  </Helmet>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div>
        <h1
          aria-level="1"
          role="heading"
        >
          Some Short Headline
        </h1>
        <div>
          <ArticleFlags />
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication
              date="2015-03-13T18:54:58.000Z"
              publication="TIMES"
            />
          </span>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <div>
            <div>
              Share
            </div>
            <Link>
              <svg
                aria-label="[title]"
                height={15}
                role="img"
                viewBox="0 0 22 16"
                width={20.625}
              >
                <title>
                  Share by email client
                </title>
                <g
                  fill="#696969"
                  fillRule="nonzero"
                >
                  <path
                    d="M22,0 L22,16 L0,16 L0,0 L22,0 Z M13.5135,8 L20.2711667,2.23985068 L20.0346667,1.91880541 L11,9.20018665 L2.04233333,2.00093327 L1.80583333,2.32197853 L8.56533333,8.08026132 L1.80766667,13.8404106 L2.04233333,14.1595894 L9.0365,8.47970135 L11,10.1595894 L13.0423333,8.39944004 L20.0346667,14.079328 L20.2711667,13.7582828 L13.5135,8 Z"
                  />
                </g>
              </svg>
            </Link>
            <Link
              target="_blank"
              url="https://twitter.com/intent/tweet?text=undefined"
            >
              <svg
                aria-label="[title]"
                height={15}
                role="img"
                viewBox="-354.2 -279.4 750 600"
                width={18.75}
              >
                <title>
                  Share on tweeter
                </title>
                <path
                  d="M391.3-210.7c-28.9,10.9-57.8,21.7-86.7,25.3c32.5-18.1,54.2-50.6,68.7-83.1c-28.9,18.1-61.5,28.9-97.6,36.1 c-28.9-28.9-68.7-47-112-47c-83.1,0-151.8,68.7-151.8,151.8c0,10.8,0,25.3,3.6,36.1c-126.5-7.3-238.6-68.7-314.5-159 c-14.5,21.7-21.7,50.6-21.7,75.9c0,54.2,25.3,101.2,68.7,126.5c-25.3,0-47-7.2-68.7-18.1c0,0,0,0,0,3.6 c0,72.3,54.2,137.4,122.9,148.2c-14.5,3.6-25.3,3.6-39.7,3.6c-10.9,0-18.1,0-28.9-3.6c18.1,61.5,75.9,104.8,141,104.8 c-50.6,39.8-119.3,65.1-188,65.1c-10.8,0-25.3,0-36.1-3.6c68.7,43.3,148.2,68.7,234.9,68.7C167.2,320.6,319,89.3,319-113.1 c0-7.2,0-14.4,0-18.1C344.3-152.9,369.6-181.8,391.3-210.7z"
                  fill="#696969"
                />
              </svg>
            </Link>
            <Link
              target="_blank"
              url="https://www.facebook.com/sharer/sharer.php?text=undefined"
            >
              <svg
                aria-label="[title]"
                height={18}
                role="img"
                viewBox="14 10 10.592460632324219 20.397258758544922"
                width={9}
              >
                <title>
                  Share on facebook
                </title>
                <g
                  fill="#696969"
                  fillRule="nonzero"
                >
                  <path
                    d="M20.8754687,30.3972581 L20.8754687,21.0930804 L23.9984274,21.0930804 L24.4660462,17.4670773 L20.8754687,17.4670773 L20.8754687,15.1521034 C20.8754687,14.1022918 21.1669846,13.3868799 22.6723889,13.3868799 L24.5924599,13.3860409 L24.5924599,10.1429146 C24.2603909,10.0987257 23.1206168,10 21.7945782,10 C19.0262491,10 17.1309761,11.6898042 17.1309761,14.7929991 L17.1309761,17.4670773 L14,17.4670773 L14,21.0930804 L17.1309761,21.0930804 L17.1309761,30.3972581 L20.8754687,30.3972581 Z"
                  />
                </g>
              </svg>
            </Link>
            <Link>
              <svg
                aria-label="[title]"
                height={15}
                role="img"
                viewBox="0 0 15 15"
                width={15}
              >
                <title>
                  Copy link o clipboard
                </title>
                <path
                  d="M13.936 1.12A3.532 3.532 0 0 0 11.36 0a3.53 3.53 0 0 0-2.575 1.119l-3.22 3.38c-1.42 1.49-1.42 3.914 0 5.405.229.24.49.43.763.596L7.71 9.052a1.793 1.793 0 0 1-.857-.5 1.924 1.924 0 0 1-.455-.827v-.002a1.984 1.984 0 0 1-.06-.324l-.001-.011a2.074 2.074 0 0 1-.005-.32l.002-.025c.009-.103.024-.206.048-.307.001-.009.005-.017.007-.026.08-.314.23-.614.464-.86l3.22-3.38a1.776 1.776 0 0 1 1.288-.558c.465 0 .932.187 1.287.559a1.98 1.98 0 0 1 0 2.703l-1.119 1.174c.03.082.05.167.075.25l.001.002a5.013 5.013 0 0 1 .216 1.702l-.007.082c-.008.134-.013.268-.032.402l2.154-2.26c1.42-1.491 1.42-3.917 0-5.406zM8.672 4.5l-1.38 1.45c.312.08.611.24.856.497.227.24.373.526.456.828v.003c.029.107.048.214.06.323v.011c.01.107.013.213.006.32l-.003.026a2.01 2.01 0 0 1-.047.307c-.002.01-.006.018-.008.026-.08.314-.23.613-.464.86l-3.22 3.378c-.356.374-.822.56-1.288.56-.465 0-.932-.186-1.287-.56a1.978 1.978 0 0 1 0-2.702l1.119-1.175c-.03-.082-.05-.167-.075-.25l-.02-.069A4.982 4.982 0 0 1 3.18 6.7c0-.029.004-.056.006-.083.008-.134.013-.268.032-.402l-2.154 2.26c-1.42 1.49-1.42 3.915 0 5.405A3.537 3.537 0 0 0 3.64 15c.973 0 1.887-.398 2.576-1.119l3.22-3.379c1.419-1.49 1.419-3.915 0-5.404a3.644 3.644 0 0 0-.764-.598z"
                  fill="#696969"
                />
              </svg>
            </Link>
          </div>
          <div>
            <div>
              Save
            </div>
            <Link>
              <svg
                aria-label="[title]"
                height={16}
                role="img"
                viewBox="0 0 12 16"
                width={12}
              >
                <title>
                  Save to My Articles
                </title>
                <path
                  d="M1 0h10a1 1 0 0 1 1 1v15l-5.98-4.466L0 16V1a1 1 0 0 1 1-1z"
                  fill="#FFFFFF"
                  stroke="#696969"
                />
              </svg>
            </Link>
          </div>
        </div>
      </div>
    </div>
    <div>
      <p>
        Some content
      </p>
      <ArticleExtras
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentsEnabled={true}
        relatedArticlesVisible={false}
      />
    </div>
  </div>
</article>
`;

exports[`5. an article with ads 1`] = `
<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta
      content="Some Headline"
      name="article:title"
    />
    <meta
      content="The Times"
      name="article:publication"
    />
    <meta
      content="Some Headline"
      property="og:title"
    />
    <meta
      content="article"
      property="og:type"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      property="og:url"
    />
    <meta
      content="Some Headline"
      name="twitter:title"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      name="twitter:url"
    />
  </Helmet>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div>
        <h1
          aria-level="1"
          role="heading"
        >
          Some Headline
        </h1>
        <div>
          <ArticleFlags />
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication
              date="2015-03-13T18:54:58.000Z"
              publication="TIMES"
            />
          </span>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <div>
            <div>
              Share
            </div>
            <Link>
              <svg
                aria-label="[title]"
                height={15}
                role="img"
                viewBox="0 0 22 16"
                width={20.625}
              >
                <title>
                  Share by email client
                </title>
                <g
                  fill="#696969"
                  fillRule="nonzero"
                >
                  <path
                    d="M22,0 L22,16 L0,16 L0,0 L22,0 Z M13.5135,8 L20.2711667,2.23985068 L20.0346667,1.91880541 L11,9.20018665 L2.04233333,2.00093327 L1.80583333,2.32197853 L8.56533333,8.08026132 L1.80766667,13.8404106 L2.04233333,14.1595894 L9.0365,8.47970135 L11,10.1595894 L13.0423333,8.39944004 L20.0346667,14.079328 L20.2711667,13.7582828 L13.5135,8 Z"
                  />
                </g>
              </svg>
            </Link>
            <Link
              target="_blank"
              url="https://twitter.com/intent/tweet?text=undefined"
            >
              <svg
                aria-label="[title]"
                height={15}
                role="img"
                viewBox="-354.2 -279.4 750 600"
                width={18.75}
              >
                <title>
                  Share on tweeter
                </title>
                <path
                  d="M391.3-210.7c-28.9,10.9-57.8,21.7-86.7,25.3c32.5-18.1,54.2-50.6,68.7-83.1c-28.9,18.1-61.5,28.9-97.6,36.1 c-28.9-28.9-68.7-47-112-47c-83.1,0-151.8,68.7-151.8,151.8c0,10.8,0,25.3,3.6,36.1c-126.5-7.3-238.6-68.7-314.5-159 c-14.5,21.7-21.7,50.6-21.7,75.9c0,54.2,25.3,101.2,68.7,126.5c-25.3,0-47-7.2-68.7-18.1c0,0,0,0,0,3.6 c0,72.3,54.2,137.4,122.9,148.2c-14.5,3.6-25.3,3.6-39.7,3.6c-10.9,0-18.1,0-28.9-3.6c18.1,61.5,75.9,104.8,141,104.8 c-50.6,39.8-119.3,65.1-188,65.1c-10.8,0-25.3,0-36.1-3.6c68.7,43.3,148.2,68.7,234.9,68.7C167.2,320.6,319,89.3,319-113.1 c0-7.2,0-14.4,0-18.1C344.3-152.9,369.6-181.8,391.3-210.7z"
                  fill="#696969"
                />
              </svg>
            </Link>
            <Link
              target="_blank"
              url="https://www.facebook.com/sharer/sharer.php?text=undefined"
            >
              <svg
                aria-label="[title]"
                height={18}
                role="img"
                viewBox="14 10 10.592460632324219 20.397258758544922"
                width={9}
              >
                <title>
                  Share on facebook
                </title>
                <g
                  fill="#696969"
                  fillRule="nonzero"
                >
                  <path
                    d="M20.8754687,30.3972581 L20.8754687,21.0930804 L23.9984274,21.0930804 L24.4660462,17.4670773 L20.8754687,17.4670773 L20.8754687,15.1521034 C20.8754687,14.1022918 21.1669846,13.3868799 22.6723889,13.3868799 L24.5924599,13.3860409 L24.5924599,10.1429146 C24.2603909,10.0987257 23.1206168,10 21.7945782,10 C19.0262491,10 17.1309761,11.6898042 17.1309761,14.7929991 L17.1309761,17.4670773 L14,17.4670773 L14,21.0930804 L17.1309761,21.0930804 L17.1309761,30.3972581 L20.8754687,30.3972581 Z"
                  />
                </g>
              </svg>
            </Link>
            <Link>
              <svg
                aria-label="[title]"
                height={15}
                role="img"
                viewBox="0 0 15 15"
                width={15}
              >
                <title>
                  Copy link o clipboard
                </title>
                <path
                  d="M13.936 1.12A3.532 3.532 0 0 0 11.36 0a3.53 3.53 0 0 0-2.575 1.119l-3.22 3.38c-1.42 1.49-1.42 3.914 0 5.405.229.24.49.43.763.596L7.71 9.052a1.793 1.793 0 0 1-.857-.5 1.924 1.924 0 0 1-.455-.827v-.002a1.984 1.984 0 0 1-.06-.324l-.001-.011a2.074 2.074 0 0 1-.005-.32l.002-.025c.009-.103.024-.206.048-.307.001-.009.005-.017.007-.026.08-.314.23-.614.464-.86l3.22-3.38a1.776 1.776 0 0 1 1.288-.558c.465 0 .932.187 1.287.559a1.98 1.98 0 0 1 0 2.703l-1.119 1.174c.03.082.05.167.075.25l.001.002a5.013 5.013 0 0 1 .216 1.702l-.007.082c-.008.134-.013.268-.032.402l2.154-2.26c1.42-1.491 1.42-3.917 0-5.406zM8.672 4.5l-1.38 1.45c.312.08.611.24.856.497.227.24.373.526.456.828v.003c.029.107.048.214.06.323v.011c.01.107.013.213.006.32l-.003.026a2.01 2.01 0 0 1-.047.307c-.002.01-.006.018-.008.026-.08.314-.23.613-.464.86l-3.22 3.378c-.356.374-.822.56-1.288.56-.465 0-.932-.186-1.287-.56a1.978 1.978 0 0 1 0-2.702l1.119-1.175c-.03-.082-.05-.167-.075-.25l-.02-.069A4.982 4.982 0 0 1 3.18 6.7c0-.029.004-.056.006-.083.008-.134.013-.268.032-.402l-2.154 2.26c-1.42 1.49-1.42 3.915 0 5.405A3.537 3.537 0 0 0 3.64 15c.973 0 1.887-.398 2.576-1.119l3.22-3.379c1.419-1.49 1.419-3.915 0-5.404a3.644 3.644 0 0 0-.764-.598z"
                  fill="#696969"
                />
              </svg>
            </Link>
          </div>
          <div>
            <div>
              Save
            </div>
            <Link>
              <svg
                aria-label="[title]"
                height={16}
                role="img"
                viewBox="0 0 12 16"
                width={12}
              >
                <title>
                  Save to My Articles
                </title>
                <path
                  d="M1 0h10a1 1 0 0 1 1 1v15l-5.98-4.466L0 16V1a1 1 0 0 1 1-1z"
                  fill="#FFFFFF"
                  stroke="#696969"
                />
              </svg>
            </Link>
          </div>
        </div>
      </div>
    </div>
    <div>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="inline-ad"
      />
      <ArticleExtras
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentsEnabled={true}
        relatedArticlesVisible={false}
      />
    </div>
  </div>
</article>
`;
